opam-version: "2.0"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/ocaml-plnx"
bug-reports: "https://github.com/vbmithr/ocaml-plnx/issues"
dev-repo: "git+https://github.com/vbmithr/ocaml-plnx"
doc: "https://vbmithr.github.io/ocaml-plnx/doc"
build: [ "dune" "build" "-j" jobs "-p" name ]
run-test: [ "dune" "runtest" "-j" jobs "-p" name ]
depends: [
  "dune" {>= "1.11.4"}
  "plnx" {= version}
  "core_kernel" {>= "v0.12.3"}
  "ptime" {>= "0.8.5"}
  "ocplib-json-typed" {>= "0.7.1"}
]
synopsis: "Poloniex API"
description: """
"""
