opam-version: "2.0"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/ocaml-plnx"
bug-reports: "https://github.com/vbmithr/ocaml-plnx/issues"
dev-repo: "git+https://github.com/vbmithr/ocaml-plnx"
doc: "https://vbmithr.github.io/ocaml-plnx/doc"
build: [ "dune" "build" "-j" jobs "-p" name ]
run-test: [ "dune" "runtest" "-j" jobs "-p" name ]
depends: [
  "dune" {>= "1.11.4"}
  "plnx" {= version}
  "logs-async" {= version}
  "fastws-async" {= version}
  "httpaf" {>= "0.6.5"}
  "core" {>= "v0.12.4"}
  "async" {>= "v0.12.0"}
  "ptime" {>= "0.8.5"}
  "yojson" {>= "1.7.0"}
  "ocplib-json-typed" {>= "0.7.1"}
  "digestif" {>= "0.8.0"}
]
synopsis: "Poloniex API"
description: """
"""
