(library
 (name        plnx)
 (public_name plnx)
 (modules plnx)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   fixtypes
   sexplib
   ptime
   ocplib-json-typed))

(library
 (name        plnx_rest)
 (public_name plnx-rest)
 (modules plnx_rest)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   plnx
   core
   yojson
   digestif.c
   ocplib-json-typed
   httpaf
   fastrest))

(library
 (name        plnx_ws)
 (public_name plnx-ws)
 (preprocess (pps ppx_sexp_conv))
 (modules plnx_ws)
 (libraries
   plnx
   core_kernel
   ptime
   ocplib-json-typed))
