(test
 (name       test)
 (modules    test)
 (package plnx-rest)
 (preprocess (pps ppx_jane))
 (libraries
   base64
   plnx-rest
   alcotest
   alcotest-async
   logs-async-reporter))

(executable
 (name ws)
 (modules ws)
 (public_name plnx-cli)
 (package plnx-cli)
 (preprocess (pps ppx_jane))
 (libraries
   core
   async
   yojson
   fastws-async
   logs-async-reporter
   plnx-rest
   plnx-ws))
