(test
 (name       test)
 (modules    test)
 (package plnx-rest)
 (preprocess (pps ppx_jane))
 (libraries
   plnx-rest
   core
   async
   alcotest-async))

(executable
 (name ws)
 (modules ws)
 (public_name plnx-cli)
 (package plnx-cli)
 (preprocess (pps ppx_jane))
 (libraries
   core
   async
   yojson
   fastws-async
   logs-async-reporter
   plnx-rest
   plnx-ws))
