(library
 (name        plnx_ws)
 (public_name plnx-ws)
 (modules plnx_ws)
 (libraries
  bs-devkit
  plnx
  core
  async
  cohttp
  wamp-msgpck
  wamp-yojson
  logs-async
  websocket-async))

(library
 (name        plnx_ws_new)
 (public_name plnx-ws-new)
 (preprocess (pps ppx_sexp_conv))
 (modules plnx_ws_new)
 (libraries
  bs-devkit
  plnx
  core
  async
  logs-async
  websocket-async))
