(library
 (name        plnx_ws)
 (public_name plnx-ws)
 (preprocess (pps ppx_sexp_conv))
 (modules plnx_ws)
 (libraries
  bs-devkit
  plnx
  core_kernel
  logs-async
  ptime
  ocplib-json-typed
  fastws-async))

(library
 (name        plnx_ws_async)
 (public_name plnx-ws-async)
 (preprocess (pps ppx_sexp_conv))
 (modules plnx_ws_async)
 (libraries
  plnx
  plnx-ws
  core
  async
  bs-devkit
  logs-async
  ptime
  ocplib-json-typed
  fastws-async))
